@@ -1548,13 +1548,13 @@ int debuginfod_find_source(debuginfod_client *client,
 int debuginfod_add_http_header (debuginfod_client *client, const char* header)
 {
   /* Sanity check header value is of the form Header: Value.
-     It should contain exactly one colon that isn't the first or
+     It should contain at least one colon that isn't the first or
      last character.  */
-  char *colon = strchr (header, ':');
-  if (colon == NULL
-      || colon == header
-      || *(colon + 1) == '\0'
-      || strchr (colon + 1, ':') != NULL)
+  char *colon = strchr (header, ':'); /* first colon */
+  if (colon == NULL /* present */
+      || colon == header /* not at beginning - i.e., have a header name */
+      || *(colon + 1) == '\0') /* not at end - i.e., have a value */
+    /* NB: but it's okay for a value to contain other colons! */
     return -EINVAL;
 
   struct curl_slist *temp = curl_slist_append (client->headers, header);
